# Oculography-Neural-Network

./: .gitignore  AnnotationApp.py  FrameExtractor.py  README.md  pyproject.toml  run_finetuning.sh  run_inference.sh  run_train.sh
apps/annotation_app/: ellipse_manager.py  media_editor.py  old_ellipse_maker.py
callbacks/: __init__.py  early_stopping.py  logger.py
data_utils/: __init__.py  loading.py
data_utils/datasets/: __init__.py  data_augmentation.py  image_transforms.py  inference_dataset.py  regression_augmentation.py  regression_dataset.py  segmentation_augmentation.py  segmentation_dataset.py
data_utils/segmentation/: __init__.py  data_augmentation.py  segmentaion_dataset.py  segmentation_dataset.py
ellipse/: .gitignore  __init__.py  ellipse.py  ellipse_utils.py
evaluation/: mask_evaluation.py
evaluation/regression/: __init__.py  reg_eval.py
evaluation/segmentation/: __init__.py  seg_eval.py
inference/: __init__.py  argparser.py  model_loading.py  run_inference.py
losses/regression/: __init__.py  losses.py
losses/segmentation/: __init__.py  losses.py
models/: base_net.py
models/backbones/: __init__.py  backbone.py  mobile_net.py  res_net.py  xception.py
models/regression/: __init__.py  ellipse_net.py
models/segmentation/: __init__.py  deeplab.py  unet.py
src/annotation_app/: data_manager.py  gui.py  media_editor.py
train/: .gitignore  argparser.py  dataloaders.py  evaluation.py  fine_tune.py  helper_functions.py  init_training.py  training.py  u_net_test.ipynb  weights_and_biases.py
train/models/: unet.py
training_experiments/: .gitignore  run_inference.sh  run_train.sh
training_experiments/inference/: run_inference.py
training_experiments/models/: __init__.py  (+1 more)
training_inference/: .gitignore  inference.py  train.py  video_reader.py
video/: data_manager.py  ellipse_maker.py  ellipse_manager.py  gui.py  image_player.py  main.py  media_editor.py  video_editor.py  video_player.py
(+16 files in other folders)
