[tool.poetry]
name = "oculography-nn"
version = "0.1.0"
description = ""
authors = [
    "Michał Nożkiewicz <mnozkiewicz@student.agh.edu.pl>",
    "Jakub Kasperski <jkasperski@student.agh.edu.pl"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
torch = "^2.5.0"
torchvision = "^0.20.0"
torchviz = "^0.0.2"
torchview = "^0.2.6"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
onnx = "^1.17.0"
onnxscript = "^0.1.0.dev20241201"
wandb = "^0.18.7"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
scikit-learn = "^1.5.2"
torchmetrics = "^1.6.0"
scipy = "^1.14.1"
torcheval = "^0.0.7"
natsort = "^8.4.0"
seaborn = "^0.13.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
